# tauri-proxy-example

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: server.rs
src-tauri/src/: main.rs
