[package]
name = "tauri-proxy-example"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["macos-proxy"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fast-socks5 = "0.9.6"
tokio = { version = "1.37.0", features = ["io-util", "net", "time", "macros"] }
anyhow = "1.0.81"
thiserror = "1.0.58"
tokio-stream = "0.1.15"
async-trait = "0.1.79"
log = "0.4.21"
structopt = "0.3.26"
env_logger = "0.11.3"


[[example]]
name = "server"
